--- a/views/admin/edit-category.ejs
+++ b/views/admin/edit-category.ejs
@@ -18,7 +18,7 @@
                     <div class="col-md-3 py-4">
                         <div class="form-group">
                             <div class="form-label rounded">Category Name</div>
-                            <input type="text" value="<%= categoryData.category%>" name="category" placeholder="Category Name" required>
+                            <input type="text" value="<%= categoryData.categoryName%>" name="category" placeholder="Category Name" required>
                         </div>
                       </div>
                       <div class="row">
