--- a/views/users/user-otp.ejs
+++ b/views/users/user-otp.ejs
@@ -47,6 +47,14 @@
 
     <%-include('../layout/footer.ejs')%>
 
+
+<!-- SweetAlert library -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
+<!-- jQuery library -->
+<!-- <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script> -->
+
+
 	<script>
 		 let countdown = 60; // Initial countdown value in seconds
         let timerElement = document.getElementById('timer');
@@ -137,5 +145,6 @@
     });
 
 	</script>
+
 </body>
 </html>
