--- a/views/admin/add-category.ejs
+++ b/views/admin/add-category.ejs
@@ -14,13 +14,14 @@
           </div>
           <div class="card-body px-0 pb-2">
             <div class="container-fluid">
-            <form action="/admin/add-category" enctype="multipart/form-data" method="post"> 
+            <form action="/admin/add-category" enctype="multipart/form-data" method="post" id="form"> 
   
                 <div class="row">
                     <div class="col-md-3 py-4">
                         <div class="form-group">
                             <div class="form-label rounded">Category Name</div>
-                            <input type="text"  name="categoryName" placeholder="Category" required>
+                            <input type="text"  name="categoryName" placeholder="Category" required id="category">
+                            <div id="error" class="error-message text-danger"></div>
                         </div>
                       </div>
                       
@@ -60,3 +61,31 @@
 
 <%-include('../admin/adminLayout/footer.ejs')%>
 
+<script>
+
+
+      const category = document.getElementById('category');
+      const  form  = document.getElementById('form')
+      const errorElement = document.getElementById("error")
+  
+      form.addEventListener('submit',(e)=>{
+      let messages = []
+
+      if(  category.value =="" || category.value == null){
+        messages.push('Please add a input')
+      }
+  
+      if( category.value.length > 20 ){
+           messages.push("Category name less than 20 characters only!")
+      }
+  
+      if( messages.length > 0  ){
+        e.preventDefault()
+        errorElement.innerText = messages.join(' & ')
+        
+      }
+  
+      })
+      
+      
+  </script>
