--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -4,9 +4,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Project</title>
-	
-</head>
-<body>
+
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
+
 	
 		<!-- Google font -->
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
@@ -30,7 +31,43 @@
 		<!-- Custom stlylesheet -->
 		<link type="text/css" rel="stylesheet" href="/css/style.css"/>
     	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheets" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
+
+		<style>
+			.header-links {
+			  list-style: none;
+			  margin: 0;
+			  padding: 0;
+			  display: flex;
+			  align-items: center;
+			}
+		
+			.dropdown {
+			  position: relative;
+			  display: inline-block;
+			  margin-right: 20px; /* Adjust as needed */
+			}
+		
+			.dropdown-content {
+			  display: none;
+			  position: absolute;
+			  background-color: #4d4a4a;
+			  min-width: 100px;
+			  box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+			  z-index: 1;
+			}
+		
+			.dropdown-content a {
+			  padding: 12px 16px;
+			  text-decoration: none;
+			  display: block;
+			  color: #333;
+			}
+		
+			.dropdown-content a:hover {
+			  background-color: #9b9797;
+			}
+		  </style>
+	</head>
 <body>
     <!-- HEADER -->
 		<header>
@@ -42,33 +79,15 @@
 						<li><a href="#"><i class="fa fa-envelope-o"></i> powerelectricals@email.com</a></li>
 						<li><a href="#"><i class="fa fa-map-marker"></i> 1734 Stonecoal Road</a></li>
 					</ul>
-					<ul class="header-links pull-right">
-						<!-- <li><a href="#"><i class="fa fa-rupee"></i> IND</a></li> -->
-						<% if(user){%>
-						<li><a href="/logout"><i class="fa fa-user-o"></i>Logout</a></li>
-						<%}else{%>
-						<li><a href="/login"><i class="fa fa-user-o"></i> Login</a></li>
-						<%}%>
-					</ul>
 				
 				</div>
 			</div>
 			<!-- /TOP HEADER -->
 
-			<!-- <div class="dropdown">
-				<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-				  Dropdown button
-				</button>
-				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-				  <a class="dropdown-item" href="#">Action</a>
-				  <a class="dropdown-item" href="#">Another action</a>
-				  <a class="dropdown-item" href="#">Something else here</a>
-				</div>
-			  </div> -->
 			<!-- MAIN HEADER -->
 			<div id="header">
 				<!-- container -->
-				<div class="container">
+				<div class="container" style="width: 100%;">
 					<!-- row -->
 					<div class="row">
 						<!-- LOGO -->
@@ -98,72 +117,46 @@
 						<!-- /SEARCH BAR -->
 
 						<!-- ACCOUNT -->
-						<div class="col-md-3 clearfix">
-							<div class="header-ctn">
-								<!-- Wishlist -->
-								<div>
-									<a href="#">
-										<i class="fa fa-heart-o"></i>
-										<span>Your Wishlist</span>
-										<div class="qty">2</div>
-									</a>
-								</div>
-								<!-- /Wishlist -->
-
-								<!-- Cart -->
-								<div class="dropdown">
-									<a href="/cart" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
-										<i class="fa fa-shopping-cart"></i>
-										<span>Your Cart</span>
-										<div class="qty">3</div>
-									</a>
-									<div class="cart-dropdown">
-										<div class="cart-list">
-											<div class="product-widget">
-												<div class="product-img">
-													<img src="./static/images/product01.png" alt="">
-												</div>
-												<div class="product-body">
-													<h3 class="product-name"><a href="#">product name goes here</a></h3>
-													<h4 class="product-price"><span class="qty">1x</span>$980.00</h4>
-												</div>
-												<button class="delete"><i class="fa fa-close"></i></button>
-											</div>
-
-											<div class="product-widget">
-												<div class="product-img">
-													<img src="./static/images/product02.png" alt="">
-												</div>
-												<div class="product-body">
-													<h3 class="product-name"><a href="#">product name goes here</a></h3>
-													<h4 class="product-price"><span class="qty">3x</span>$980.00</h4>
-												</div>
-												<button class="delete"><i class="fa fa-close"></i></button>
-											</div>
-										</div>
-										<div class="cart-summary">
-											<small>3 Item(s) selected</small>
-											<h5>SUBTOTAL: $2940.00</h5>
-										</div>
-										<div class="cart-btns">
-											<a href="#">View Cart</a>
-											<a href="#">Checkout  <i class="fa fa-arrow-circle-right"></i></a>
-										</div>
+							<div class="col-md-3 clearfix">
+								<div class="header-ctn">
+									<!-- Wishlist -->
+									<div>
+										<a href="#">
+											<i class="fa fa-heart-o"></i>
+											<span>Your Wishlist</span>
+											<div class="qty">2</div>
+										</a>
+									</div>
+									<div>
+										<a href="/cart">
+											<i class="fa fa-shopping-cart"></i>
+											<span>Your Cart</span>
+											<div class="qty">2</div>
+										</a>
+									</div>
+									<div class="header-links pull-right">
+										<li class="dropdown">
+										  <a href="#" class="dropbtn"><i class="fa fa-user-o"></i>
+											<% if (user && user.name) { %>
+											<%= user.name %></a>
+											<% } else { %>
+												Guest
+											<% } %>
+										  <div class="dropdown-content">
+											<% if(user){ %>
+											  <a href="/profile"><i class="fa fa-user"></i> Profile</a>
+											  <a href="/logout"><i class="fa fa-sign-out-alt"></i> Logout</a>
+											<% } else { %>
+											  <a href="/login"><i class="fa fa-sign-in-alt"></i> Login</a>
+											<% } %>
+										  </div>
+										</li>
 									</div>
 								</div>
-								<!-- /Cart -->
-
-								<!-- Menu Toogle -->
-								<div class="menu-toggle">
-									<a href="#">
-										<i class="fa fa-bars"></i>
-										<span>Menu</span>
-									</a>
-								</div>
-								<!-- /Menu Toogle -->
 							</div>
-						</div>
+						
 						<!-- /ACCOUNT -->
+
 					</div>
 					<!-- row -->
 				</div>
@@ -172,7 +165,22 @@
 			<!-- /MAIN HEADER -->
 		</header>
 		<!-- /HEADER -->
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script>
+    $(document).ready(function(){
+      $(".dropbtn").click(function(){
+        $(".dropdown-content").toggle();
+      });
 
+      $(document).on("click", function(event){
+        var dropdown = $(".dropdown");
+        if(!dropdown.is(event.target) && dropdown.has(event.target).length === 0){
+          $(".dropdown-content").hide();
+        }
+      });
+    });
+  </script>
+		
 		
     
 
