--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -22,7 +22,7 @@
                             <div class="col-md-6 col-lg-6 d-flex align-items-center" >
                                 <div class="card-body text-black">
                                     <div class="signup-form" id="form">
-                                        <form class="row login_form" action="register" method="post" enctype="multipart/form-data" id="contactForm" >
+                                        <form class="row login_form" action="register" method="post" id="contactForm" >
                                             <h2>Sign Up</h2>
                                             <p>Please fill in this form to create an account!</p>
                                             <hr>
@@ -36,7 +36,7 @@
                                                     <p class="text-danger"></p>
                                                     <div id="emailError" class="error-message text-danger"></div>
                                                     <!-- <p class="text-center"></p> -->
-                                             
+
                                             </div>
                                             <div class="col-md-12 form-group">
                                                 <input type="tel" class="form-control" name="mobile" placeholder="Mobile Number" onblur="validateMobile()" >
@@ -226,8 +226,6 @@
     document.addEventListener('DOMContentLoaded', function () {
         handleServerMessages();
     });
-
-
 
     </script>
 </body>
